--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ru.spbsu.apmath</groupId>
-  <artifactId>account-service</artifactId>
-  <packaging>jar</packaging>
+  <artifactId>account-service-root</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>account-service</name>
   <url>http://maven.apache.org</url>
+
+
+  <modules>
+    <module>account-service-server</module>
+    <module>account-service-client</module>
+  </modules>
+
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
