--- a/account-service-client/pom.xml
+++ b/account-service-client/pom.xml
@@ -1,27 +1,45 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
+    <parent>
+        <groupId>ru.spbsu.apmath</groupId>
+        <artifactId>account-service-root</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>ru.spbsu.apmath</groupId>
-    <artifactId>account-service-root</artifactId>
+    <artifactId>account-service-client</artifactId>
     <version>1.0-SNAPSHOT</version>
-  </parent>
+    <name>account-service-client</name>
+    <url>http://maven.apache.org</url>
 
-  <groupId>ru.spbsu.apmath</groupId>
-  <artifactId>account-service-client</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>account-service-client</name>
-  <url>http://maven.apache.org</url>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>ru.spbsu.apmath.accountservice.client.App</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
