rft - rename ClientApp and move to accoutservice package

--- a/account-service-client/pom.xml
+++ b/account-service-client/pom.xml
@@ -26,7 +26,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>ru.spbsu.apmath.accountservice.client.App</mainClass>
+                            <mainClass>ru.spbsu.apmath.accountservice.ClientApp</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
